--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
     "express": "^4.18.2",
+    "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
     "typescript-cookie": "^1.0.6",
     "zone.js": "~0.14.3"
