--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
+    "@angular/material": "^17.2.1",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
+    "david-ui-angular": "^1.1.0",
     "express": "^4.18.2",
+    "flowbite": "^2.3.0",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.5",
