--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
     "jwt-decode": "^4.0.0",
+    "ng-recaptcha": "^13.2.1",
     "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.5",
